--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2018"
 
 [dependencies]
 tungstenite = "0.13.0"
-log = "0.4"
 url = "2.0.0"
-native-tls = "0.2"
-env_logger = "0.8.3"
+native-tls = "0.2.7"
 serde_json = "1.0"
+tokio = { version = "1", features = ["full"] }
 serde = "*"
+reqwest = "0.11.3"
