--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,8 @@ native-tls = "0.2.7"
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 serde = "*"
-reqwest = "0.11.3"
+reqwest = "0.11.2"
+ring = ""
+hmac = ""
+sha2 = ""
+hex = ""
