--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ native-tls = "0.2.7"
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 serde = "*"
-reqwest = "0.11.2"
+reqwest = {version = "0.11.2", features = ["json"]}
 ring = ""
 hmac = ""
 sha2 = ""
