--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2018"
 tungstenite = "0.13.0"
 url = "2.0.0"
 native-tls = "0.2.7"
-serde_json = "1.0"
+serde_json = {version="1.0", features = ["preserve_order"]}
 tokio = { version = "1", features = ["full"] }
 serde = "*"
 reqwest = {version = "0.11.2", features = ["json"]}
