--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ url = "2.0.0"
 native-tls = "0.2.7"
 serde_json = {version="1.0", features = ["preserve_order"]}
 tokio = { version = "1", features = ["full"] }
-serde = "*"
+serde = { version = "1.0.126", features = ["derive"]}
 reqwest = {version = "0.11.2", features = ["json"]}
 ring = ""
 hmac = ""
