--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rustws"
 version = "0.1.0"
-authors = ["simonrave"]
+authors = ["saulane"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -18,7 +18,7 @@ ring = ""
 hmac = ""
 sha2 = ""
 hex = ""
-#config file
-confy = ""
 lazy_static = "1.4.0"
 csv = "1.1.6"
+pyo3 = "0.13.2"
+chrono = "0.4.19"
